objects/box__Lead_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>box__Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>box__Do_Not_Move__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Move</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>box__contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>box__opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>opportunity</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead Setting</label>
</CustomObject>